test/caffeine_lang/corpus/frontend/parser/errors/refinement_missing_in.caffeine
Blueprints for "SLO"
  * "test":
    Requires { env: String { x | x { "a" } } }
    Provides { value: "x" }
